[tool.poetry]
name = "community-pulse"
version = "0.1.0"
description = ""
authors = ["zkan <kan@prontomarketing.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
django-extensions = "^2.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-django = "^3.8.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
