[tool.poetry]
name = "community-pulse"
version = "0.1.0"
description = ""
authors = ["zkan <kan@prontomarketing.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
